--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/ssr": "^0.5.1",
+    "@supabase/supabase-js": "^2.45.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.451.0",
     "next": "^14.2.15",
+    "next-auth": "^4.24.8",
     "node": "^20.18.0",
     "react": "^18.3.1",
     "react-hook-form": "^7.53.0",
